--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "_blank",
-  "short_name": "_blank",
+  "name": "ohwa-build",
+  "short_name": "ohwa-build",
   "start_url": "/",
   "display": "standalone"
 }
