--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,11 @@
 {
-  "name": "_blank",
+  "name": "ohwa-build",
   "main": "index.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "iron-pages": "PolymerElements/iron-pages#^2.0.0",
+    "app-route": "PolymerElements/app-route#^2.0.1",
+    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^2.0.1"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
