--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ohwa-build description",
   "main": "index.html",
   "scripts": {
-    "dev": "npm install -g polymer-cli"
+    "dev": "npm install -g polymer-cli && bower install"
   },
   "repository": {
     "type": "git",
